k8s/apps/maps/_configs/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: s3_proxy
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: s3_proxy
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: seaweedfs_s3
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: seaweedfs_s3
                http_filters:
                  - name: envoy.filters.http.aws_request_signing
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
                      service_name: s3
                      region: us-east-1
                      use_unsigned_payload: true
                      host_rewrite: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                      match_excluded_headers:
                        - prefix: x-envoy
                        - prefix: x-forwarded
                        - exact: x-amzn-trace-id
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: seaweedfs_s3
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: seaweedfs_s3
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: seaweedfs-default-s3.seaweedfs.svc.cluster.local
                      port_value: 8333
